src/styles/dark.css
@layer base {
  .dark {
    /* Main Colors */
    --color-main: var(--color-white);
    --color-main-hover: var(--color-grey-200);
    --color-subtle: var(--color-grey-400);
    --color-alt: var(--color-white);
    --color-rev: var(--color-black);
    --color-alt-rev: var(--color-black);
    --color-muted: var(--color-grey-800);

    --color-info: var(--color-fbk-info-subtle);
    --color-info-rev: var(--color-fbk-info);
    --color-warn: var(--color-fbk-warn-subtle);
    --color-warn-rev: var(--color-fbk-warn);
    --color-success: var(--color-fbk-success-subtle);
    --color-success-rev: var(--color-fbk-success);
    --color-error: var(--color-fbk-danger-subtle);
    --color-error-rev: var(--color-fbk-danger);

    /* Surface Colors */
    --color-surface-neutral: var(--color-grey-950);
    --color-surface-neutral-hover: var(--color-grey-900);
    --color-surface-selected: var(--color-grey-800);
    --color-surface-selected-hover: var(--color-grey-900);
    --color-surface-primary: var(--color-grey-900);
    --color-surface-secondary: var(--color-grey-700);
    --color-surface-tertiary: var(--color-grey-900);
    --color-surface-info: var(--color-fbk-info-surface-dark);
    --color-surface-warn: var(--color-fbk-warn-surface-dark);
    --color-surface-success: var(--color-fbk-success-surface-dark);
    --color-surface-error: var(--color-fbk-danger-surface-dark);
    --color-surface-muted: var(--color-grey-500);

    /* Borders */
    --color-bdr-subtle: var(--color-grey-800);
    --color-bdr-soft: var(--color-grey-800);
    --color-bdr-strong: var(--color-white);

    /* Outline Ring */
    --color-ring: var(--color-white);
    --color-ring-alt: var(--color-white);
    --color-ring-offset: var(--color-grey-950);
    --color-ring-offset-alt: var(--color-grey-950);

    /* Buttons */
    --color-btn-primary: var(--color-grey-950);
    --color-btn-primary-hover: var(--color-grey-900);
    --color-btn-secondary: var(--color-grey-900);
    --color-btn-secondary-hover: var(--color-grey-800);
    --color-btn-tertiary: var(--color-grey-800);
    --color-btn-tertiary-hover: var(--color-grey-700);
    --color-btn-active: var(--color-grey-800);
    --color-btn-active-hover: var(--color-grey-700);

    /* Inputs */
    --color-input-disabled: var(--color-grey-800);

    /*Links*/
    --color-link-visited: var(--color-purple-subtle);

    /* Tooltips */
    --color-tooltip: var(--color-grey-600);
    --color-tooltip-foreground: var(--color-white);

    /* Overlay */
    --color-overlay: oklch(0 0 0 / 0.6);

    /* Documentation */
    --color-docs: var(--color-juke);
  }
}

